src/test/ui/compile-fail-migration/range_traits-7.stderr
error: compilation successful
  --> $DIR/range_traits-7.rs:19:1
   |
LL | fn main() {} //~ ERROR success
   | ^^^^^^^^^^^^

error: aborting due to previous error

